# abico

./: .gitignore  README.md  app.py  app_backup.py  check_env.py  download_models.py  fix_dlib.bat  fix_dlib.sh  fix_wav2lip.bat  gradio_f5tts.py  install.bat  install_linux.sh  install_windows.bat  instructions.md  launch_app.bat  notes.md  pyproject.toml  requirements.txt  run_linux.sh  run_windows.bat  start.bat  temp_easy_function.py  temp_wav2lip_service.py  test.py  test_ffmpeg.py  troubleshooting.md
services/: f5tts_service.py  service.md  talking_avatar_service.py  wav2lip_service.py
utils/: text_to_audio.py  utils.md  video_processor.py
